v2.1.1 add go patch api
